# alhos-e-bugalhos

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AlhosEBugalhos.csproj  AlhosEBugalhos.sln  Program.cs  README.md  Startup.cs  alhos-e-bugalhos.csproj  config.toml  pyproject.toml  setup.cfg
.github/workflows/: build.yml  check.yml  checks.yml  tests.yml
AlhosEBugalhos.Tests/: AlhosEBugalhos.Tests.csproj
AlhosEBugalhos/Views/Shared/: _Layout.cshtml
Controllers/: HomeController.cs
Models/: ErrorViewModel.cs
Properties/: launchSettings.json
Views/: _ViewImports.cshtml
Views/Shared/: _Layout.cshtml
alhos_e_bugalhos/: __init__.py
alhos_e_bugalhos/connections/: __init__.py  backends.py  example.py  frontends.py
alhos_e_bugalhos/helpers/: excel.py  json.py  xml.py
alhos_e_bugalhos/templates/: base.html  edit.html  index.html
tests/: conftest.py  test_management.py
