[build-system]
requires = ['flit_core >=2,<4']
build-backend = 'flit_core.buildapi'

[tool.flit.metadata]
module = 'alhos_e_bugalhos'
author = 'Filipe Laíns, João Lourenço, Luís Ferreira'
home-page = 'https://github.com/ipl-thefinalcountdown/alhos-e-bugalhos'
classifiers = [
    'License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)'
]
description-file = 'README.md'

