[build-system]
requires = ['flit_core >=2,<4']
build-backend = 'flit_core.buildapi'

[tool.flit.metadata]
module = 'alhos_e_bugalhos'
author = 'Filipe Laíns, João Lourenço, Luís Ferreira'
home-page = 'https://github.com/ipl-thefinalcountdown/alhos-e-bugalhos'
classifiers = [
    'License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)'
]
description-file = 'README.md'
requires = [
    'fastapi~=0.62.0',
    'mako~=1.1.0',
    'xlrd~=1.2.0',
    'validators',
]

[tool.flit.metadata.requires-extra]
test = [
    'pytest',
    'pytest-cov',
    'beautifulsoup4',
]
